# openCOSMO-RS-Phi_cpp

./: CMakeLists.txt  README.md  openCOSMORS.sln  openCOSMORS.vcxproj  openCOSMORS.vcxproj.filters  openCOSMORS_python_example.pyproj  open_vs_with_conda_env.bat
bindings/: ethane.orcacosmo  methane.orcacosmo  methanol.orcacosmo  methylcyclohexane.orcacosmo  nButane.orcacosmo  nhexane.orcacosmo  run_phi_mixture.py  run_phi_pure.py  run_phi_pure_with_densities.py
code/: COSMOfile_functions.hpp  bindings_forCLI.cpp  bindings_forMATLAB.cpp  bindings_forPython.cpp  contact_statistics.hpp  core_functions.hpp  general.hpp  helper_functions.hpp  interaction_matrix.hpp  phase_equilibrium.hpp  simd.hpp  types.hpp
